Specify working directory This makes it so all other required files have visibility when systemd runs the superdoku.sh script for starting and stopping

--- a/Server/superdoku.service
+++ b/Server/superdoku.service
@@ -3,6 +3,7 @@ Description=Superdoku
 After=syslog.target network.target
 
 [Service]
+WorkingDirectory=/opt/superdoku/bin
 Type=forking
 
 User=root
